# HVAR

./: README.md  did.txt
Gerenciadores de enviroments/pipenv_env/: camelcase_test.py
Gerenciadores de enviroments/poetry_env/demo/: pyproject.toml
semana1/EnvManage/pipenv_env/: Pipfile  camelcase_test.py  finally_0.csv  plotly_test.py
semana1/EnvManage/poetry_env/: pyproject.toml
semana1/EnvManage/poetry_env/tests/: test_poetry_env.py
semana1/EnvManage/pyenv_env/: simple_file.py
semana1/Gerenciadores de enviroments/pipenv_env/: Pipfile
