[tool.poetry]
name = "poetry_env"
version = "0.1.0"
description = ""
authors = ["Vakihito <victor.kamada.tomita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
plotly = "^5.1.0"
numpy = "^1.21.0"
camelcase = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
plotly = "^5.1.0"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
